bk_ida/gccida/g1/ix86_prepare_fp_compare_args
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7683:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7683:41: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  ix86_prepare_fp_compare_args( rtx_code code, rtx *pop0, rtx *pop1) 
                                        ^
                                        enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7688:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7689:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7690:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v9; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7691:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7724:19: error: use of undeclared identifier 'machine_mode'
v4 = force_reg( ( machine_mode)v6, v4); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/i386.c:7725:19: error: use of undeclared identifier 'machine_mode'
v5 = force_reg( ( machine_mode)v6, v5); 
                  ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_prepare_fp_compare_args/src/obj/i386.o] Error 1
